--- a/LoanCalculator/LoanCalculator/Zopa.LoanCalculator.Client.csproj
+++ b/LoanCalculator/LoanCalculator/Zopa.LoanCalculator.Client.csproj
@@ -66,7 +66,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataLoader.cs" />
+    <Compile Include="FileReader.cs" />
+    <Compile Include="IFileReader.cs" />
+    <Compile Include="LendersManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
